--- a/styles/main.scss
+++ b/styles/main.scss
@@ -20,9 +20,14 @@ main {
   display: flex;
   align-items: center;
   justify-content: center;
+
+  @media (max-width: 580px) {
+    height: auto;
+  }
 }
 
 .calculator {
+  margin: 1rem;
   box-sizing: border-box;
   padding: 3rem;
   width: 700px;
@@ -31,57 +36,104 @@ main {
   border-radius: 1.6rem;
   border-bottom-right-radius: 10rem;
 
+  @media (max-width: 580px) {
+    width: 500px;
+    padding: 1.5rem;
+  }
+
   form {
     display: flex;
-    align-items: center;
-    gap: 2rem;
-    border-bottom: 2px solid $Off-white;
-    padding-bottom: 2.5rem;
-    position: relative;
+    flex-direction: column;
 
-    label {
+    .input-container {
       display: flex;
-      flex-direction: column;
-      text-transform: uppercase;
-      letter-spacing: 0.1rem;
-      font-size: 0.97rem;
+      gap: 1.8rem;
 
-      input {
-        margin: 0.4rem 0;
-        width: 120px;
-        height: 60px;
-        padding-left: 1rem;
-        outline: none;
-        border-radius: 0.3rem;
-        border: 1px solid $Light-grey;
-        font-size: 1.8rem;
-        font-family: inherit;
-        font-weight: 700;
+      @media (max-width: 580px) {
+        gap: 1rem;
       }
 
-      input::placeholder {
-        font-size: inherit;
-      }
+      label {
+        display: flex;
+        flex-direction: column;
+        color: $Smokey-grey;
+        text-transform: uppercase;
+        letter-spacing: 0.1rem;
+        font-size: 0.97rem;
 
-      input:focus {
-        border: 1px solid $Purple;
+        @media (max-width: 580px) {
+          font-size: 0.87rem;
+        }
+
+        input {
+          margin: 0.4rem 0;
+          width: 120px;
+          height: 60px;
+          padding-left: 1rem;
+          outline: none;
+          border-radius: 0.5rem;
+          border: 1px solid $Light-grey;
+          font-size: 1.8rem;
+          font-family: inherit;
+          font-weight: 700;
+
+          @media (max-width: 580px) {
+            width: 76px;
+            font-size: 1.2rem;
+          }
+        }
+
+        input::placeholder {
+          font-size: inherit;
+        }
+
+        input:focus {
+          border: 1px solid $Purple;
+        }
       }
     }
 
-    button {
-      position: absolute;
-      border: none;
-      right: 0%;
-      top: 70%;
-      padding: 1rem;
-      background-color: $Purple;
-      border-radius: 50%;
-      transition: all 0.3s;
-    }
+    .btn-container {
+      width: 100%;
+      height: 100px;
+      display: flex;
+      align-items: center;
+      position: relative;
 
-    button:hover {
-      cursor: pointer;
-      background-color: $Off-black;
+      hr {
+        width: 100%;
+        border: none;
+        border-bottom: 2px solid $Light-grey;
+      }
+
+      button {
+        border: none;
+        padding: 1.4rem;
+        background-color: $Purple;
+        border-radius: 50%;
+        transition: all 0.3s;
+
+        @media (max-width: 700px) {
+          position: absolute;
+          padding: 0;
+          margin-left: auto;
+          margin-right: auto;
+          left: 0;
+          right: 0;
+          width: 90px;
+          height: 90px;
+        }
+
+        @media (max-width: 580px) {
+          width: 70px;
+          height: 70px;
+        }
+      }
+
+      button:hover {
+        cursor: pointer;
+        background-color: $Off-black;
+      }
     }
   }
 
@@ -89,7 +141,6 @@ main {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    margin: 2rem 0 0 0;
 
     p {
       margin: 0;
@@ -97,6 +148,11 @@ main {
       font-size: 4.5rem;
       font-style: italic;
       font-weight: 700;
+
+      @media (max-width: 580px) {
+        font-size: 3rem;
+        line-height: 3.6rem;
+      }
 
       span {
         color: $Purple;
